5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1749_3095.log
== TEST (2019-05-15 19:15:36) 
-- CODE:
r=int(input("didite o resultado: "))
a=0
b=0
c=0

while(r=!x):
	if(r==v)or(r==V):
		soma=a+3
		a=somv
	if(r==e)or(r==E):
		somb=b+2
		b=somb
	if(r==d)or(r==D):
		somd=c+1
-- ERROR:
File "XXXX", line 6
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:16:40) 
-- CODE:
r=int(input("didite o resultado: "))
a=0
b=0
c=0

while(r=!x):
	if(r==v)or(r==V):
		soma=a+3
		a=somv
	if(r==e)or(r==E):
		somb=b+2
		b=somb
	if(r==d)or(r==D):
		somd=c+1
		d=somd
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 6
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:17:29) 
-- CODE:
r=int(input("didite o resultado: "))
a=0
b=0
c=0

while(r=!x):
	if(r==v):
		soma=a+3
		a=somv
	if(r==e):
		somb=b+2
		b=somb
	if(r==d):
		somd=c+1
		d=somd
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 6
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:18:21) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0

while(r=!x):
	elif(r==v):
		soma=a+3
		a=somv
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 6
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:18:28) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0

while(r=!x):
	if(r==v):
		soma=a+3
		a=somv
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 6
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:18:45) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:20:44) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=somv
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:23:46) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=somv
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:07) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=somv
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:09) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=somv
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:43) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=soma
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=c+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:25:03) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=soma
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a,b,c)		
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:01) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=soma
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:18) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!x):
	if(r==v):
		soma=a+3
		a=soma
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!x):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:45) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r==v):
		soma=a+3
		a=soma
	elif(r==e):
		somb=b+2
		b=somb
	elif(r==d):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:06) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:41) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:41) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:41) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:42) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:42) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
d=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somd=d+1
		d=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:28:17) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:28:23) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.22022
-- ERROR:
  File "/home/codebench/codes/1749/3095/main.py", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:28:23) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.260226
-- ERROR:
  File "/home/codebench/codes/1749/3095/main.py", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:28:23) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.336978
-- ERROR:
  File "/home/codebench/codes/1749/3095/main.py", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:28:47) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somd
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:29:25) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r=!"x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
File "XXXX", line 5
    while(r=!"x"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:30:18) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r!="x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:30:23) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r!="x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.168479
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 1, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:30:28) 
-- CODE:
r=int(input("digite o resultado: "))
a=0
b=0
c=0
while(r!="x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:30:58) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r!="x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=int(input("digite o resultado: "))	
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    r=int(input())	
ValueError: invalid literal for int() with base 10: 'V'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:31:21) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r!="x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    r=input()	
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:31:28) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r!="x"):
	if(r=="v"):
		soma=a+3
		a=soma
	elif(r=="e"):
		somb=b+2
		b=somb
	elif(r=="d"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.149759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 15, in <module>
    r=input()	
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:24) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:34:26) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.196626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 20, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:34:28) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.293677
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 20, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:34:28) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.162741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 20, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:28) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")	
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:08) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
	r=r.upper()
		
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:39) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
	r=r.upper()
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:25) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
	r=r.upper()
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:52) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r!="X"):
	if(r=="V"):
		soma=a+3
		a=soma
	elif(r=="E"):
		somb=b+2
		b=somb
	elif(r=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
	r=r.upper()
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:35) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r.upper!="X"):
	if(r.upper=="V".upeer()):
		soma=a+3
		a=soma
	elif(r.upper=="E"):
		somb=b+2
		b=somb
	elif(r.upper=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
	r=r.upper()
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(r.upper=="V".upeer()):
AttributeError: 'str' object has no attribute 'upeer'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:38:54) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r.upper!="X"):
	if(r.upper=="V".upeer()):
		soma=a+3
		a=soma
	elif(r.upper=="E"):
		somb=b+2
		b=somb
	elif(r.upper=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.17021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 7, in <module>
    if(r.upper=="V".upeer()):
AttributeError: 'str' object has no attribute 'upeer'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:39:44) 
-- CODE:
r=input("digite o resultado: ")
r=r.upper()
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.153199
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 19, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:07) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:40:09) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.214966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 18, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:40:10) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.138719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 18, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:40:10) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.291159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 18, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:40:10) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- EXECUTION TIME:
0.260816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3095/main.py", line 18, in <module>
    print(d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:11) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	elif(r.upper()=="E"):
		somb=b+2
		b=somb
	elif(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:57) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	if(r.upper()=="E"):
		somb=b+2
		b=somb
	if(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:42:06) 
-- CODE:
r=input("digite o resultado: ")
a=0
b=0
c=0
while(r.upper()!="X"):
	if(r.upper()=="V"):
		soma=a+3
		a=soma
	if(r.upper()=="E"):
		somb=b+2
		b=somb
	if(r.upper()=="D"):
		somc=c+1
		c=somc
	r=input("digite o resultado: ")
print(a)
print(b)
print(c)
		
-- EXECUTION TIME:
0.209178
-- TEST CASE 1:
---- input:
v
V
E
D
D
a
b
c
d
X
---- correct output:
6
2
3
---- user output:
6
2
3
-- TEST CASE 2:
---- input:
V
E
C
B
A
X
---- correct output:
3
2
0
---- user output:
3
2
0
-- TEST CASE 3:
---- input:
A
A
v
v
V
V
X
---- correct output:
12
0
0
---- user output:
12
0
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
